--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -9,7 +9,7 @@
   
   body {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-    background-color: #191c24;
+    background-color: #000000;
     color: #e0e0e0;
     overflow: hidden;
   }
@@ -22,6 +22,16 @@
     width: 100vw;
     max-width: 100%;
     overflow: hidden;
+    position: relative;
+  }
+  
+  .background-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
   }
   
   /* Main content area */
